<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IniciarSesion"
    android:background="@mipmap/cov">

    <LinearLayout
        android:layout_width="408dp"
        android:layout_height="401dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.903"
        tools:layout_editor_absoluteX="1dp">

        <EditText
            android:id="@+id/etEmail"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/etEmail"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/etPass"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/etPass"
            android:inputType="textPassword"
            android:onClick="iniciarSesion" />

        <Button
            android:id="@+id/btnLogin"
            android:onClick="iniciarSesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnIniciar" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>